--- a/UltimateShopping/src/main/webapp/assets/css/myapp.css
+++ b/UltimateShopping/src/main/webapp/assets/css/myapp.css
@@ -4,40 +4,7 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-:root { -
-	-blue: #007bff; -
-	-indigo: #6610f2; -
-	-purple: #6f42c1; -
-	-pink: #e83e8c; -
-	-red: #dc3545; -
-	-orange: #fd7e14; -
-	-yellow: #ffc107; -
-	-green: #28a745; -
-	-teal: #20c997; -
-	-cyan: #17a2b8; -
-	-white: #fff; -
-	-gray: #6c757d; -
-	-gray-dark: #343a40; -
-	-primary: #007bff; -
-	-secondary: #6c757d; -
-	-success: #28a745; -
-	-info: #17a2b8; -
-	-warning: #ffc107; -
-	-danger: #dc3545; -
-	-light: #f8f9fa; -
-	-dark: #343a40; -
-	-breakpoint-xs: 0; -
-	-breakpoint-sm: 576px; -
-	-breakpoint-md: 768px; -
-	-breakpoint-lg: 992px; -
-	-breakpoint-xl: 1200px; -
-	-font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-		"Noto Color Emoji"; -
-	-font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
-		"Liberation Mono", "Courier New", monospace
-}
+ 
 
 *, ::after, ::before {
 	box-sizing: border-box
@@ -46,6 +13,7 @@
 html {
 	font-family: sans-serif;
 	line-height: 1.15;
+	height:100%;
 	-webkit-text-size-adjust: 100%;
 	-webkit-tap-highlight-color: transparent
 }
@@ -443,6 +411,8 @@ hr {
 	font-size: 80%;
 	color: #6c757d
 }
+
+
 
 .blockquote-footer::before {
 	content: "\2014\00A0"
@@ -5421,26 +5391,13 @@ a.badge-dark.focus, a.badge-dark:focus {
 	color: #040505
 }
 
-@
--webkit-keyframes progress-bar-stripes {
-	from {background-position: 1rem 0
-}
+
 
 to {
 	background-position: 0 0
 }
 
-}
-@
-keyframes progress-bar-stripes {
-	from {background-position: 1rem 0
-}
 
-to {
-	background-position: 0 0
-}
-
-}
 .progress {
 	display: -ms-flexbox;
 	display: flex;
@@ -6650,20 +6607,9 @@ a.close.disabled {
 	text-align: center
 }
 
-@
--webkit-keyframes spinner-border {
-	to {-webkit-transform: rotate(360deg);
-	transform: rotate(360deg)
-}
 
-}
-@
-keyframes spinner-border {
-	to {-webkit-transform: rotate(360deg);
-	transform: rotate(360deg)
-}
 
-}
+
 .spinner-border {
 	display: inline-block;
 	width: 2rem;
@@ -6682,46 +6628,10 @@ keyframes spinner-border {
 	border-width: .2em
 }
 
-@
--webkit-keyframes spinner-grow { 0%{
-	-webkit-transform: scale(0);
-	transform: scale(0)
-}
 
-50
-%
-{
-opacity
-:
-1;
--webkit-transform
-:
-none;
-transform
-:
-none
-}
-}
-@
-keyframes spinner-grow { 0%{
-	-webkit-transform: scale(0);
-	transform: scale(0)
-}
 
-50
-%
-{
-opacity
-:
-1;
 -webkit-transform
-:
-none;
-transform
-:
-none
-}
-}
+
 .spinner-grow {
 	display: inline-block;
 	width: 2rem;
@@ -8060,15 +7970,8 @@ a.bg-dark:focus, a.bg-dark:hover, button.bg-dark:focus, button.bg-dark:hover
 	z-index: 1030
 }
 
-@
-supports ((position:-webkit-sticky) or (position:sticky)) { .
-	sticky-top {position: -webkit-sticky;
-	position: sticky;
-	top: 0;
-	z-index: 1020
-}
 
-}
+
 .sr-only {
 	position: absolute;
 	width: 1px;
@@ -9932,4 +9835,26 @@ a.text-dark:focus, a.text-dark:hover {
 		border-color: #dee2e6
 	}
 }
+
+
+
+.wrapper{
+	
+	min-height:100%;
+	position:relative;
+}
+
+.content{
+	
+	
+}
+
+
+
+
+
+
+
+
+
 /*# sourceMappingURL=bootstrap.min.css.map */
